# Voice_generation

./: .gitignore  Cargo.toml  README.md  build.rs  deepfilternet_denoise.sh  generateYAML.py  generate_voice_code.py  huggingface_generate.sh  huggingface_prosody_generate.sh  launch_inference.sh  launch_mfa_align.sh  launch_normalizing.sh  launch_vst.sh  lipsync_generate.sh  mturk_thefuzz.sh  resemblyzer_voice_code.sh  template.yaml  two_speakers_similarity_from_file.py
microservice_utils/: .gitignore  Cargo.toml  build.rs
microservice_utils/bhuman_micros/: Cargo.toml
microservice_utils/bhuman_micros/src/: lib.rs
microservice_utils/proto/: address_book_service.proto  ai_studio_service.proto  auth_service.proto  file_manager_service.proto  user_service.proto  workspace_service.proto
microservice_utils/src/: lib.rs
microservice_utils/src/jwt/: auth.rs  extractor.rs  mod.rs
microservice_utils/src/open_api/: gen.rs
microservice_utils/src/server/: amplitude.rs  consumer.rs  error_404.rs  grpc.rs  health.rs  hybrid.rs  mod.rs  producer.rs  provider.rs  rd_msg.rs  response.rs  spa.rs
migrations/: 20220604050234_audio_detect_pauses.sql  20220604050234_audio_mturk.sql  20220604050234_audio_mturk_users.sql  20220604050234_audio_names.sql  20220604050234_audio_trash.sql  20220604050234_audio_user_names.sql  20220604050234_mailchimp_user.sql
proto/: auth_service.proto
src/: lib.rs
src/error_404/: error_404.rs  mod.rs  not_found.rs
src/handlers/: mod.rs  video_lipsync_handler.rs  voice_extracts_handler.rs  voice_generation_handler.rs  voice_huggingface_handler.rs  voice_mturk_handler.rs  voice_spreadsheet_handler.rs  voice_train_handler.rs
src/models/: actor.rs  audio.rs  client.rs  csv.rs  folder.rs  mod.rs  param.rs  segment.rs  video.rs  voice_generation.rs  ws_board.rs  ws_message.rs  ws_types.rs
src/utils/: audio_process.rs  consumer.rs  download_audio.rs  grpc.rs  jwt.rs  mod.rs  response.rs  upload_audio.rs  video_process.rs
